src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    /* @apply dark:bg-gray-800 bg-stone-100; */
    @apply bg-stone-100 text-gray-800;
  }
}

body {
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  overflow-y: auto;
}

.typewriter h1 {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  padding-right: 0.15em;
  border-right: 0.15em solid rgb(13 148 136); /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: #0d9488;
  }
}

:root {
  --primary: #0d9488;
}
.landing-btn {
  transition: ease 0.2s;
}
.landing-btn:hover {
  background: transparent;
  background-image: repeating-linear-gradient(90deg, var(--primary), var(--primary) 20px, transparent 20px, transparent 28px),
    repeating-linear-gradient(180deg, var(--primary), var(--primary) 20px, transparent 20px, transparent 28px),
    repeating-linear-gradient(90deg, var(--primary), var(--primary) 20px, transparent 20px, transparent 28px),
    repeating-linear-gradient(180deg, var(--primary), var(--primary) 20px, transparent 20px, transparent 28px);
  background-position: left top, right top 10px, left 15px bottom, left top 8px;
  background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;
  background-size: 100% 3px, 3px calc(100% * 28), calc(100% * 28) 3px, 3px calc(100% * 28);
  cursor: pointer;
}

.section-1 {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.section-2-bg {
  height: 30vh;
  width: 100vw;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  /* -webkit-clip-path: polygon(0 0, 0 100vw, 100vw 80px, 100vw 0); */
  clip-path: polygon(0 0, 100vw 0, 100vw 250px, 0 0);
}

#blog-post h1,
h2,
h3,
h4,
h5,
p {
  @apply text-gray-800;
}

.markdown table {
  width: 100%;
  align-items: center;
}

.markdown table tr {
  text-align: left;
}

.markdown table thead tr {
  border-bottom: #0d9488;
  border-bottom-width: 3px;
  border-bottom-style: solid;
  margin-top: 4px;
  margin-bottom: 4px;
}
th,
td {
  padding: 10px;
}

